--- a/Bank/templates/customer.html
+++ b/Bank/templates/customer.html
@@ -80,11 +80,11 @@
               >
                 {% if action.related %}
                 {{action.related.name|default_if_none:""}}
-                <p
-                  class="p4 hidden opacity-0 transition-opacity group-hover:block group-hover:opacity-100"
+                <span
+                  class="absolute left-1/2 -translate-x-1/2 top-full mt-1 hidden whitespace-nowrap rounded bg-gray-800 p-2 text-sm text-white shadow-lg opacity-0 transition-opacity group-hover:block group-hover:opacity-100"
                 >
                   {{action.related.nr}}
-                </p>
+                </span>
                 {% endif %}
               </td>
               <!-- TODO: Hover ID-->
