--- a/Bank/templates/dashboard.html
+++ b/Bank/templates/dashboard.html
@@ -96,31 +96,22 @@
             {% if actions %} {% for action in actions %}
             <tr>
               <td class="border p-2">{{action.id}}</td>
-              <td
-                class="group relative border p-2"
-                onclick="customerDet('{{action.customer.nr}}');"
-              >
+              <td class="group relative border p-2" onclick="customerDet('{{action.customer.nr}}');">
                 {{action.customer.name}}
-                <p
-                  class="p4 hidden opacity-0 transition-opacity group-hover:block group-hover:opacity-100"
-                >
+                <span
+                  class="absolute left-1/2 -translate-x-1/2 top-full mt-1 hidden whitespace-nowrap rounded bg-gray-800 p-2 text-sm text-white shadow-lg opacity-0 transition-opacity group-hover:block group-hover:opacity-100">
                   {{action.customer.nr}}
-                </p>
+                </span>
               </td>
               <td class="border p-2">{{action.amount}}</td>
               <td class="border p-2">{{action.get_type_display }}</td>
-              <td
-                class="relatie group border p-2"
-                {% if action.related.nr %}
-                onclick="customerDet('{{action.related.nr}}');"
-                {% endif %}
-              >
-                {% if action.related %}{{action.related.name | default:""}}
-                <p
-                  class="p4 hidden opacity-0 transition-opacity group-hover:block group-hover:opacity-100"
-                >
+              <td class="group relative border p-2"{% if action.related %} onclick="customerDet('{{action.related.nr}}');" {% endif %}>
+                {% if action.related%}
+                {{action.related.name}}
+                <span
+                  class="absolute left-1/2 -translate-x-1/2 top-full mt-1 hidden whitespace-nowrap rounded bg-gray-800 p-2 text-sm text-white shadow-lg opacity-0 transition-opacity group-hover:block group-hover:opacity-100">
                   {{action.related.nr}}
-                </p>
+                </span>
                 {% endif %}
               </td>
               <td class="border p-2">{{action.date| date:"l (j.m)"}}</td>
