fix: correct breadcrumb navigation in login page

--- a/Bank/templates/login.html
+++ b/Bank/templates/login.html
@@ -24,9 +24,9 @@
       <!-- Breadcrumb -->
       <nav class="ml-auto">
         <ol class="flex list-none">
-          <li><a href="/" class="text-blue-200">Home</a></li>
+          <li><a href="/" class="text-blue-200">{% trans "home"%}</a></li>
           <li class="mx-2">/</li>
-          <li class="text-gray-200">Pay</li>
+          <li class="text-gray-200">{% trans "login"%}</li>
         </ol>
       </nav>
     </div>
