--- a/Bank/static/index.css
+++ b/Bank/static/index.css
@@ -1,13 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
+@import 'tailwindcss';
+
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
+
+@layer utilities {
+}
 
 div#header {
   background-color: rgb(22, 101, 52); /* bg-green-800 */
-  color: rgb(255, 255, 255); /* text-white */
-}
-
-body {
-  background-color: rgb(243, 244, 246);
 }
